# fort2c

./: README.md  pyproject.toml
fort2c/: __init__.py  cli.py  transpiler.py
fortc/: __init__.py  cli.py  transpiler.py
tests/: README.md  run_differential.sh  test_differential.py  test_smoke.py
tests/cases/arithmetic/: integer_basic.f  integer_power.f  neg_int_power.f  real_basic.f  real_power.f
tests/cases/arrays/: alloc_dim_reassigned.f  array_constructor.f  automatic.f  count_all_any.f  dim_reduction.f  lower_bound.f  matmul.f  rank1.f  rank2.f  rank3.f  reshape_cshift.f  section_arg.f  transpose.f  where_construct.f  whole_array.f
tests/cases/complex/: basic.f  intrinsics.f
tests/cases/control_flow/: arithmetic_if.f  associate.f  computed_goto.f  do_trip_count.f  do_while.f  dummy_as_loop_var.f  exit_cycle.f  forall.f  if_elseif.f  labeled_goto.f  select_case.f  stop_program.f
tests/cases/declarations/: data_implied_do.f  data_param.f  save_attr.f
tests/cases/intrinsics/: abs_integer.f  bit_intrinsics.f  bit_ops2.f  conversions.f  exp_log_sqrt.f  floor_ceiling.f  hyperbolic.f  integer_sign.f  merge_dim.f  min_max_mod.f  modulo.f  numeric_inquiry.f  reduction_extra.f  reduction_multidim.f  reductions.f  trig.f
tests/cases/io/: array_output.f  implied_do_runtime.f
tests/cases/memory/: allocatable.f
tests/cases/probes/: README.md  big_exponent_format.f
tests/cases/procedures/: char_dummy_arg.f  entry_point.f  function_return.f  nested_calls.f  statement_function.f
tests/cases/strings/: char_literal_args.f  (+3 more)
tests/runtime/: fort2c_runtime.h
(+4 files in other folders)
